Update padding to compensate for margin-collapse-bugfix

--- a/styles/forms.css
+++ b/styles/forms.css
@@ -421,7 +421,7 @@ button, [type=button], [type=submit], [type=reset], [role=button] {
   width: max-content;
   padding: var(--margin-collapse-bugfix) var(--line-height);
   background: buttonFace;
-  margin: var(--p-margin);
+  margin: var(--margin-collapse-bugfix) 0.67em 0.67em;
   border-radius: 0.1618em;
   font-size: var(--larger);
   -webkit-appearance: button;
